I delete build switch and recursion and made calls directly to child nodes when is needed
* I add expr to grammar (&&, ||, !)
* Eliminate parent dependency in the tree for simplicity
* I made add_tab(n) for \t in output
* Update maven target and source version from 15 to 21 because of
compile errors with HDL